--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:e2e": "react-scripts test --testPathPattern=.*e2e.test.js$",
+    "test:basic-auth": "react-scripts test --testPathPattern=.*basic-auth.test.js$",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
